[package]
name = "rlpx_handshake"
version = "0.1.1"
authors = ["Vikram Bhattacharjee"]
edition = "2021"

[dependencies]
aes = "0.6"
aes-ctr = "0.6"
anyhow = "1"
arrayvec = "0.5"
block-modes = "0.7"
byteorder = "1"
bytes = "1"
cidr = "0.1"
digest = "0.9"
ethereum-types = { version = "0.11", default-features = false, features = ["std", "rlp"] }
futures = "0.3"
generic-array = "0.14"
hex = "0.4"
hmac = "0.10"
parking_lot = "0.11"
rand = "0.8"
rlp = "0.5"
rlp-derive = "0.1"
secp256k1 = { version = "0.27.0", features = ["rand", "rand-std", "recovery"] }
sha2 = "0.9"
sha3 = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }
uuid = { version = "0.8", features = ["v4"] }
hex-literal = "0.3"
